Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Validate packer template - ${{ matrix.provider }}
         run: |
-          if [[ "gcp" == ${{ matrix.provider }}]]
+          if [[ gcp == ${{ matrix.provider }} ]]
             export PKR_VAR_project: dummy_value
           fi
-          
+
           declare -a arr=("arm64" "amd64")
           for a in "${arr[@]}"; do
             if test -f ${{ matrix.provider }}/$a/values.pkrvars.hcl; then
