Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,9 +30,10 @@ jobs:
           declare -a arr=("arm64" "amd64")
           for a in "${arr[@]}"; do
             if test -f ${{ matrix.provider }}/$a/values.pkrvars.hcl; then
-              packer validate -var-file=./${{ matrix.provider }}/$a/values.pkrvars.hcl ./${{ matrix.provider }}
+              cd ${{ matrix.provider }}
+              packer validate -var-file=$a/values.pkrvars.hcl .
             else
-              echo 'Skipping this turn. ${{ matrix.provider }}/$a/values.pkrvars.hcl Does not exist'
+              echo "Skipping this turn. ${{ matrix.provider }}/$a/values.pkrvars.hcl Does not exist"
             fi
           done
           
