Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -31,7 +31,7 @@ jobs:
           for a in "${arr[@]}"; do
             if test -f ${{ matrix.provider }}/$a/values.pkrvars.hcl; then
               cd ${{ matrix.provider }}
-              packer validate -var-file=$a/values.pkrvars.hcl .
+              packer validate -var-file=$a/values.pkrvars.hcl ./${{ matrix.provider }}
             else
               echo "Skipping this turn. ${{ matrix.provider }}/$a/values.pkrvars.hcl Does not exist"
             fi
