--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,25 +30,10 @@ jobs:
           declare -a arr=("arm64" "amd64")
           for a in "${arr[@]}"; do
             if test -f $(pwd)/${{ matrix.provider }}/$a/values.pkrvars.hcl; then
+              echo "Validating ${{ matrix.provider }}/$a"
               packer validate -var-file=$(pwd)/${{ matrix.provider }}/$a/values.pkrvars.hcl ./${{ matrix.provider }}
             else
               echo "Skipping this turn. ${{ matrix.provider }}/$a/values.pkrvars.hcl Does not exist"
             fi
+            echo "-------------------------------------------"
           done
-          
-
-      # - name: Initialize Packer Plugin Binaries:GCP
-      #   run: packer init ./gcp
-
-      # - name: Validate Template:GCP
-      #   env:
-      #     PKR_VAR_project: dummy_value
-      #   run: packer validate ./gcp
-        
-      # - name: Initialize Packer Plugin Binaries:AWS
-      #   run: packer init ./aws
-
-      # - name: Validate Template:AWS
-      #   run: |
-      #     packer validate -var-file=./aws/amd64.pkrvars.hcl ./aws
-      #     packer validate -var-file=./aws/arm64.pkrvars.hcl ./aws
