Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Validate Template:AWS
         run: |
-          packer validate -var-file=./aws/amd64.pkrvars.hcl ./aws
-          packer validate -var-file=./aws/arm64.pkrvars.hcl ./aws
+          packer validate -var-file=./aws/amd64/values.pkrvars.hcl ./aws
+          packer validate -var-file=./aws/arm64/values.pkrvars.hcl ./aws
