--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,5 +35,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          packer build -var-file=./aws/amd64/values.pkrvars.hcl ./aws
-          packer build -var-file=./aws/arm64/values.pkrvars.hcl ./aws
+          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl ./aws
+          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl ./aws
