Add support for AWS amd64/arm64 image build (#11)
* Add basic setup for aws instance creation

* Define and add application variables

* Implement packer build script

* Remove unnecessary variables and fix filename typo

* Add arm64 image source

* Remove NVIDIA drivers and unnecessay tags

* Refactor aws instance image architecture variables

* Fix lint workflow

* Update lint workflow

* Update shell provisioner scripts path

* Add build setps for aws images in build workflow

* Rename aws setup script to script without nvdia drivers

* Update aws packer script to setup nvidia drivers

* Set source images to fixed versions

* Update build and lint workflow.

* Minor fixes

* Remove unused files

* Add a bit of structure to aws and gcp directories with arch dedicated values files. Minor fixes

* Test matrix workflow

* Fix item separator error

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test matrix workflow

* Test ma

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout Packer project
         uses: actions/checkout@v3
 
-      - name: Initialize Packer Plugin Binaries
-        run: packer init .
+      - name: Initialize Packer Plugin Binaries:GCP
+        run: packer init ./gcp
 
-      - name: Build Image
+      - name: Build Image:GCP
         env:
           PKR_VAR_project: ${{ secrets.GOOGLE_PROJECT }}
           GOOGLE_APPLICATION_CREDENTIALS: gcp.json
@@ -25,4 +25,15 @@ jobs:
           ${{ secrets.GOOGLE_CREDENTIALS }}
           EOF
           trap "rm -f $GOOGLE_APPLICATION_CREDENTIALS" EXIT
-          packer build -force .
+          packer build -force -var-file=./gcp/amd64/values.pkrvars.hcl ./gcp
+
+      - name: Initialize Packer Plugin Binaries:AWS
+        run: packer init ./aws
+
+      - name: Build Image:AWS
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl ./aws
+          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl ./aws
