Disable GCP build. Build AWS only for two regions

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,6 +9,9 @@ on:
 jobs:
   validate:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        aws-region: [us-east-1, us-west-2]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -26,5 +29,5 @@ jobs:
 
       - name: Validate Template:AWS
         run: |
-          packer validate -var-file=./aws/amd64/values.pkrvars.hcl ./aws
-          packer validate -var-file=./aws/arm64/values.pkrvars.hcl ./aws
+          packer validate -var-file=./aws/amd64/values.pkrvars.hcl ./aws -var "region=${{ matrix.aws-region }}"
+          packer validate -var-file=./aws/arm64/values.pkrvars.hcl ./aws -var "region=${{ matrix.aws-region }}"
