--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,8 @@ jobs:
   packer-build:
     runs-on: ubuntu-20.04
     environment: gcp
-    matrix:
+    strategy:
+      matrix:
         aws-region: [us-east-1, us-west-2]
     steps:
       - name: Checkout Packer project
@@ -37,5 +38,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl ./aws -var "region=${{ matrix.version }}"
-          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl ./aws -var "region=${{ matrix.version }}"
+          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl ./aws -var "region=${{ matrix.aws-region }}"
+          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl ./aws -var "region=${{ matrix.aws-region }}"
