--- a/.github/workflows/update-versions.yaml
+++ b/.github/workflows/update-versions.yaml
@@ -1,8 +1,13 @@
 name: Check For Latest Versions
 
+# on:
+#   schedule:
+#     - cron:  '*/5 * * * *'
+
 on:
-  schedule:
-    - cron:  '*/5 * * * *'
+  push:
+    branches:
+      - main
 
 jobs:
   check-version:
