Test version checkiing

--- a/.github/workflows/update-versions.yaml
+++ b/.github/workflows/update-versions.yaml
@@ -21,4 +21,8 @@ jobs:
         run: |
           current_version=$(cat versions.json| jq -r '.runner')
           latest_version=$(gh api /repos/actions/runner/releases/latest | jq -r .tag_name)
-          echo $current_version $latest_version
+          if [ "$current_version" = "$latest_version" ]; then
+              echo "Strings are equal."
+          else
+              echo "Strings are not equal."
+          fi
