Test checking versions

--- a/.github/workflows/update-versions.yaml
+++ b/.github/workflows/update-versions.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout Packer Project
         uses: actions/checkout@v3
       - name: Compare versions
+        id: compare-versions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -24,12 +25,15 @@ jobs:
           matching=false
           if [ "$current_version" = "$latest_version" ]; then
               matching=true;
+          else
+              cat versions.json | jq --arg v "$latest_version" '.runner = ($v)' > tmp.json
+              cat tmp.json > versions.json
+              rm tmp.json
           fi
           echo "::set-output name=matching::$matching"
       - name: Create PR
+        if: ${{ !steps.compare-versions.outputs.matching }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          latest_version=$(gh api /repos/actions/runner/releases/latest | jq -r .tag_name)
-          cat versions.json | jq '.runner = "$latest_version"' > versions.json
-          cat versions.json
+        run: gh pr create --title "[bot] Bump versions" --body "Versions bumped"
+
