--- a/.github/workflows/update-versions.yaml
+++ b/.github/workflows/update-versions.yaml
@@ -19,21 +19,22 @@ jobs:
         id: compare-versions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CI_COMMIT_MESSAGE: Continuous Integration Commit Artifacts
+          CI_COMMIT_AUTHOR: Continuous Integration
         run: |
           current_version=$(cat versions.json | jq -r '.runner')
           latest_version=$(gh api /repos/actions/runner/releases/latest | jq -r .tag_name)
           if [ "$current_version" = "$latest_version" ]; then
               matching=true;
           else
-              echo '${{ toJSON(github) }}'
-              git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
-              git checkout -b bump-versions-${{ github.job }}
+              git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+              git config --global user.email "username@users.noreply.github.com"
+              git checkout -b bump-versions-${{ github.run_id }}
               cat versions.json | jq --arg v "$latest_version" '.runner = ($v)' > tmp.json
               cat tmp.json > versions.json
               rm tmp.json
-              git add .
-              git commit -m "[bot] Bump versions"
-              git push origin bump-versions-${{ github.job }}
+              git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
+              git push origin bump-versions-${{ github.run_id }}
               matching=false
           fi
           echo "::set-output name=matching::$matching"
@@ -41,5 +42,5 @@ jobs:
         if: ${{ steps.compare-versions.outputs.matching == 'false'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr create --title "[bot] Bump versions" --body "Versions bumped" -B bump-versions-${{ github.job }} -H main
+        run: gh pr create --title "[bot] Bump versions" --body "Versions bumped" -B bump-versions-${{ github.run_id }} -H main
 
