--- a/.github/workflows/aws-build.yaml
+++ b/.github/workflows/aws-build.yaml
@@ -1,4 +1,4 @@
-name: Packer Build
+name: Packer Build for AWS
 
 on:
   push:
@@ -6,27 +6,6 @@ on:
       - main
 
 jobs:
-  build-gcp:
-    runs-on: ubuntu-20.04
-    environment: gcp
-    steps:
-      - name: Checkout Packer project
-        uses: actions/checkout@v3
-
-      - name: Initialize Packer Plugin Binaries:GCP
-        run: packer init ./gcp
-
-      - name: Build Image:GCP
-        env:
-          PKR_VAR_project: ${{ secrets.GOOGLE_PROJECT }}
-          GOOGLE_APPLICATION_CREDENTIALS: gcp.json
-        run: |
-          cat > $GOOGLE_APPLICATION_CREDENTIALS << EOF
-          ${{ secrets.GOOGLE_CREDENTIALS }}
-          EOF
-          trap "rm -f $GOOGLE_APPLICATION_CREDENTIALS" EXIT
-          packer build -force -var-file=./gcp/amd64/values.pkrvars.hcl -var "runner_version=$(cat versions.json | jq -r '.runner')" ./gcp
-
   build-aws:
     runs-on: ubuntu-20.04
     environment: aws
