--- a/.github/workflows/aws-lint.yaml
+++ b/.github/workflows/aws-lint.yaml
@@ -1,4 +1,4 @@
-name: lint
+name: Packer Lint for AWS
 
 on:
   pull_request:
@@ -6,20 +6,6 @@ on:
   workflow_call:
 
 jobs:
-  validate-gcp:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Initialize Packer Plugin Binaries:GCP
-        run: packer init ./gcp
-
-      - name: Validate Template:GCP
-        env:
-          PKR_VAR_project: dummy_value
-        run: packer validate -var-file=./gcp/amd64/values.pkrvars.hcl -var "runner_version=$(cat versions.json | jq -r '.runner')" ./gcp
-
   validate-aws:
     runs-on: ubuntu-20.04
     strategy:
