--- a/.github/workflows/update-versions.yaml
+++ b/.github/workflows/update-versions.yaml
@@ -40,5 +40,5 @@ jobs:
         if: ${{ steps.compare-versions.outputs.matching == 'false'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr create --title "[bot] Bump versions" --body "Versions bumped" -B main -H $NEW_BRANCH
+        run: gh pr create --title "[bot] Bump versions" --body "Versions bumped" -B develop -H $NEW_BRANCH
 
