--- a/.github/workflows/aws-build.yaml
+++ b/.github/workflows/aws-build.yaml
@@ -4,14 +4,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-aws-dev:
+  build-aws-dev1:
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-20.04
-    # environment: aws_dev
+    environment: dev1
     strategy:
       matrix:
         aws-region: [us-east-1, us-west-2]
-        environment: [ 'dev1', 'dev2' ]
     steps:
       - name: Checkout Packer project
         uses: actions/checkout@v3
@@ -19,13 +18,32 @@ jobs:
       - name: Initialize Packer Plugin Binaries:AWS
         run: packer init ./aws
 
-      - uses: aws-actions/configure-aws-credentials@v1.7.0
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Build Image:AWS
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
+          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
+
+  build-aws-dev2:
+    if: github.ref == 'refs/heads/develop'
+    runs-on: ubuntu-20.04
+    environment: dev2
+    strategy:
+      matrix:
+        aws-region: [us-east-1, us-west-2]
+    steps:
+      - name: Checkout Packer project
+        uses: actions/checkout@v3
+
+      - name: Initialize Packer Plugin Binaries:AWS
+        run: packer init ./aws
 
       - name: Build Image:AWS
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
           packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
@@ -44,13 +62,10 @@ jobs:
       - name: Initialize Packer Plugin Binaries:AWS
         run: packer init ./aws
 
-      - uses: aws-actions/configure-aws-credentials@v1.7.0
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
       - name: Build Image:AWS
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
           packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
