--- a/.github/workflows/aws-build.yaml
+++ b/.github/workflows/aws-build.yaml
@@ -4,29 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-aws-dev1:
-    if: github.ref == 'refs/heads/develop'
-    runs-on: ubuntu-20.04
-    environment: dev1
-    strategy:
-      matrix:
-        aws-region: [us-east-1, us-west-2]
-    steps:
-      - name: Checkout Packer project
-        uses: actions/checkout@v3
-
-      - name: Initialize Packer Plugin Binaries:AWS
-        run: packer init ./aws
-
-      - name: Build Image:AWS
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
-          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
-
-  build-aws-dev2:
+  build-aws-dev:
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-20.04
     environment: dev2
