--- a/.github/workflows/aws-build.yaml
+++ b/.github/workflows/aws-build.yaml
@@ -2,15 +2,27 @@ name: Packer Build for AWS
 
 on:
   workflow_dispatch:
+    inputs:
+      env:
+        type: choice
+        description: Environment
+        options: 
+        - aws_dev
+        - aws_prod
+        - aws_dev_parquetsharp
+        - aws_prod_parquetsharp
 
 jobs:
-  build-aws-dev:
-    if: github.ref == 'refs/heads/develop'
+  build:
     runs-on: ubuntu-20.04
-    environment: aws_dev
+    environment: ${{ inputs.env }}
     strategy:
+      fail-fast: false
       matrix:
-        aws-region: [us-east-1, us-west-2]
+        include:
+          - params: {"aws-region": "us-east-1", "arch": "amd64"}
+          - params: {"aws-region": "us-west-2", "arch": "arm64"}
+
     steps:
       - name: Checkout Packer project
         uses: actions/checkout@v4
@@ -18,32 +30,18 @@ jobs:
       - name: Initialize Packer Plugin Binaries:AWS
         run: packer init ./aws
 
-      - name: Build Image:AWS
+      - name: Build Image:AWS - develop
+        if: github.ref == 'refs/heads/develop'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
-          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
+          packer build -force -var-file=./aws/${{ matrix.params.arch }}/values.pkrvars.hcl -var "region=${{ matrix.params.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
 
-  build-aws-prod:
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-20.04
-    environment: aws_prod
-    strategy:
-      matrix:
-        aws-region: [us-east-1, us-west-2]
-    steps:
-      - name: Checkout Packer project
-        uses: actions/checkout@v4
-
-      - name: Initialize Packer Plugin Binaries:AWS
-        run: packer init ./aws
-
-      - name: Build Image:AWS
+      - name: Build Image:AWS - prod
+        if: github.ref == 'refs/heads/main'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          packer build -force -var-file=./aws/amd64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
-          packer build -force -var-file=./aws/arm64/values.pkrvars.hcl -var "region=${{ matrix.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
+          packer build -force -var-file=./aws/${{ matrix.params.arch }}/values.pkrvars.hcl -var "region=${{ matrix.params.aws-region }}" -var "runner_version=$(cat versions.json | jq -r '.runner')" ./aws
